# mcu

./: .gitignore
01-blink/: CMakeLists.txt
02-control/: CMakeLists.txt  main.c
02-control/led-task/: led-task.c
02-control/stdio-task/: stdio-task.c  stdio-task.h
02-echo/: CMakeLists.txt  main.c
02-printf/: CMakeLists.txt  main.c
03-adc/: CMakeLists.txt  get_adc.py  get_telemetry.py  main.c
03-adc/adc-task/: adc-task.c  adc-task.h
03-adc/bild/: 03_adc.dis  03_adc.elf  03_adc.elf.map  03_adc.hex  03_adc.uf2  CMakeCache.txt  Makefile  cmake_install.cmake
03-adc/bild/pico-sdk/: Makefile  cmake_install.cmake
03-adc/bild/pico-sdk/docs/: Makefile  cmake_install.cmake
03-adc/bild/pico-sdk/src/: Makefile  cmake_install.cmake
03-adc/bild/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
03-adc/bild/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
03-adc/bild/pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
03-adc/bild/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
03-adc/bild/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
03-adc/bild/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
03-adc/bild/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
03-adc/bild/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
03-adc/bild/pico-sdk/tools/: Makefile  cmake_install.cmake
03-adc/led-task/: led-task.h
03-adc/protocol-task/: protocol-task.c  protocol-task.h
(+176 files in other folders)
